# abap-business-bridge

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  action.yml  metadata.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: abap-sync.yml  tests.yml
abap_business_bridge.egg-info/: PKG-INFO  SOURCES.txt
artifacts/: .gitignore
docs/: ENHANCEMENTS.md  SETUP.md
scripts/: copilot_summarize.py  generate_metadata.py  leanix_sync.py  update_readme.py
src/: z_sd_sales_report.prog.abap  zcl_fi_invoice.clas.abap
src/abap_business_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_copilot_summarize.py  test_generate_metadata.py  test_leanix_sync.py  test_update_readme.py
